Fixed command injection vulnerability in image preview